--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .container{
     width: 100%;
     margin: 0 auto;
 }
-.container-menu{
+.container-menu, .container-book{
     width: 100%;
     min-height: 100vh;
     
@@ -21,7 +22,7 @@
     background-color: #111;
 }
 
-.wrap-menu{
+.wrap-menu, .wrap-book{
     width: 390px;
     background-color: #222;
     border-radius: 10px;
@@ -29,16 +30,18 @@
     overflow: hidden;
     padding: 77px 55px 33px 55px;
 }
-.form-menu{
+.form-menu, .form-book{
     width: 100%;
 }
-.menu-form-title{
+.menu-form-title, .book-form-title{
     display: block;
     font-size: 50px;
-    height: 100px;
+
+    /* height: 100px; */
     color: azure;
-    line-height: 1.2;
+    /* line-height: 2.2; */
     text-align: center;
+    margin-bottom: 30px;
 }
 .menu-form-subtitle{
     display: block;
@@ -48,7 +51,7 @@
     line-height: 1.2;
     text-align: center;
 }
-.menu-form-btn{
+.menu-form-btn, .book-form-btn{
     font-size: 15px;
     border: none;
     border-radius: 10px;
@@ -64,7 +67,7 @@
     margin: 10px 0;
 }
 
-.menu-form-btn:hover{
+.menu-form-btn:hover, .book-form-btn:hover{
     background-color: #0250c5;
     cursor: pointer;
 }
