--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     width: 100%;
     margin: 0 auto;
 }
-.container-menu, .container-book{
+.container-menu, .container-book, .container-reserve{
     width: 100%;
     min-height: 100vh;
     
@@ -22,7 +22,7 @@
     background-color: #111;
 }
 
-.wrap-menu, .wrap-book{
+.wrap-menu, .wrap-book, .wrap-reserve{
     width: 390px;
     background-color: #222;
     border-radius: 10px;
@@ -30,16 +30,14 @@
     overflow: hidden;
     padding: 77px 55px 33px 55px;
 }
-.form-menu, .form-book{
+.form-menu, .form-book, .form-reserve{
     width: 100%;
 }
-.menu-form-title, .book-form-title{
+.menu-form-title, .book-form-title, .reserve-form-title{
     display: block;
     font-size: 50px;
 
-    /* height: 100px; */
     color: azure;
-    /* line-height: 2.2; */
     text-align: center;
     margin-bottom: 30px;
 }
@@ -51,7 +49,7 @@
     line-height: 1.2;
     text-align: center;
 }
-.menu-form-btn, .book-form-btn{
+.menu-form-btn, .book-form-btn, .reserve-form-btn{
     font-size: 15px;
     border: none;
     border-radius: 10px;
@@ -67,7 +65,7 @@
     margin: 10px 0;
 }
 
-.menu-form-btn:hover, .book-form-btn:hover{
+.menu-form-btn:hover, .book-form-btn:hover, .reserve-form-btn:hover{
     background-color: #0250c5;
     cursor: pointer;
 }
